--- a/manifest.json
+++ b/manifest.json
@@ -47,8 +47,7 @@
 	"content_security_policy": "script-src 'self'; object-src 'self';",
 	"web_accessible_resources": [
 		"styles.css",
-		"fonts/*",
-		"pieces/*"
+		"fonts/*"
 	],
   "icons": {
     "16": "Logos/Logo16.png",
